<resources>
    <string name="app_name">PlanetZe</string>
    <string name="app_logo">Planteze Logo</string>
    <string name="app_icon">Planteze Icon</string>
    <string name="welcome_message">Track your impact.\nMake every action count.</string>
    <string name="Loginbtn">Login</string>
    <string name="signUpBtn">Sign up</string>
    <string name="registerBtn">Register</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="fullName">Full Name</string>
    <string name="placeholderEmail">abc123@email.com</string>
    <string name="signUpInstruction">Please enter the following information</string>
    <string name="account_exists">Already have an account?\ </string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_prompt">Please enter your login details below</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="don_t_have_an_account">Don\'t have an account?\ </string>
    <string name="reset_instructions">Send reset instructions</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="button_text">New Button</string>
    <string name="IntroEcoTrackerSurvey">You will be asked a variety of questions to track your carbon emissions. Please answer the questions truthfully to ensure accurate data. Press Next to begin</string>
    <string name="habit_search_title">Search for list of Eco-Friendly habits to reduce your carbon emissions!</string>
    <string name="no_habits_text">No habits found</string>
    <string name="days_of_week">Select Days You Would Like to be Reminded</string>
    <string name="time_of_habit">Select the Time of Day You Want to be Reminded</string>
    <string name="remove_habit_dialog_text">Are You Sure You Want to Delete This Habit? You Will Lose All of Your Progress.</string>
    <string name="activity_description">Log daily activities and effectively check your past, present and future carbon emissions !</string>
    <string name="habit_description">Select from a wide variety of eco friendly habits to apply to your life. Set preferred reminder times and track completion to adopt a more eco friendly lifestyle !</string>
    <string name="title_activity_eco_tracker">EcoTrackerActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_habit_page">You have a habit corresponding to this activity, log it on the habit\'s page?</string>
    <string name="eco_hub">Eco Hub</string>
    <string name="market_trends">Market Trends</string>
    <string name="energy_efficient">Energy-Efficient Appliances</string>
    <string name="sustainable_fashion">Sustainable Fashion</string>
    <string name="green_home_solutions">Green Home Solutions</string>
    <string name="learning_resources">Learning Resources</string>
    <string name="articles">Articles</string>
    <string name="videos">Videos</string>
    <string name="search_articles">Search Articles...</string>
    <string name="search_videos">Search Videos...</string>
    <string name="search_appliances">Search Appliances...</string>
    <string name="search_fashion">Search Categories...</string>
    <string name="read_more">Read More</string>
    <string name="watch_now">Watch Now</string>
    <string name="buy_now">Buy Now</string>
    <string name="learn_more">Learn More</string>
    <string name="credit_good_on_you">Data sourced from Good On You: https://directory.goodonyou.eco/</string>
    <string name="balance">Balance</string>
    <string name="home">Home</string>
    <string name="hub">Hub</string>
    <string name="tracker">Tracker</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="welcome_user">Welcome back, John Doe</string>
    <string name="today_date">Today\'s date</string>
    <string name="log_out">Log Out</string>
    <string name="credits">Credits</string>
    <string name="settings">Settings</string>
    <string name="password_instructions">Enter the email associated with your account and we\'ll send you password reset instructions</string>
    <string name="emissions_trend">Emissions Trend</string>
    <string name="emissions_breakdown">Emissions Breakdown</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="empowering_you_to_live_sustainably">Empowering You to Live Sustainably</string>
    <string name="supporting_individuals_and_groups_on_their_sustainability_journey">Supporting Individuals and Groups on Their Sustainability Journey.</string>
    <string name="planetze_ring">Planetze Ring</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="total_emissions_text">🌍 72 kg CO₂e</string>
    <string name="your_carbon_footprint">Your Carbon Footprint</string>
    <string name="comparison_statement">You\'re emitting 5% less than yesterday. Keep it up!</string>
    <string name="time_frame_text">(today)</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="compared_to_others">Compared to Others</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="john_doe">John Doe</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="world">World</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="edit_profile">Edit Profile</string>
</resources>