<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue">


    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/planetze_logo" />

    <ImageView
        android:id="@+id/planetzeRing"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:contentDescription="@string/planetze_ring"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView9"
        app:layout_constraintTop_toBottomOf="@id/imageView9"
        android:src="@drawable/planetze_logo_ring"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="361dp"
        android:layout_height="333dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        app:srcCompat="@drawable/planteze_icon" />


    <LinearLayout
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintBottom_toTopOf="@id/action_buttons"
        app:layout_constraintTop_toBottomOf="@id/planetzeRing">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/oxfordblue"
            android:text="@string/empowering_you_to_live_sustainably"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/oxfordblue"
            android:gravity="center"
            android:paddingLeft="40sp"
            android:paddingRight="40sp"
            android:text="@string/supporting_individuals_and_groups_on_their_sustainability_journey"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/signUpBtn"
            style="@style/CustomButton"
            android:layout_height="70dp"
            android:text="@string/signUpBtn" />

        <Button
            android:id="@+id/LoginBtn"
            style="@style/CustomButton"
            android:layout_marginTop="5dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/oxfordblue"
            android:text="@string/Loginbtn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>