<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="@color/lightgrey"
    android:id="@+id/eco_hub">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/oxfordblue"
            android:gravity="center">
            <TextView
                android:id="@+id/marketTrendsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_trends"
                android:textSize="35sp"
                android:textColor="@color/lightgrey"
                android:fontFamily="@font/bitter_semibold"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/energyEfficientButton"
                android:text="@string/energy_efficient"
                android:drawableStart="@drawable/ic_energy_efficient"
                android:drawablePadding="10dp"
                style="@style/CustomEcoHubButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sustainableFashionButton"
                android:text="@string/sustainable_fashion"
                android:drawableStart="@drawable/ic_fashion"
                android:drawablePadding="10dp"
                style="@style/CustomEcoHubButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/greenHomeSolutionsButton"
                android:text="@string/green_home_solutions"
                android:drawableStart="@drawable/ic_home_solutions"
                android:drawablePadding="10dp"
                style="@style/CustomEcoHubButton"
                android:layout_marginBottom="25dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/oxfordblue"
            android:gravity="center">
            <TextView
                android:id="@+id/learningResourcesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learning_resources"
                android:textSize="35sp"
                android:textColor="@color/lightgrey"
                android:fontFamily="@font/bitter_semibold"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/articlesButton"
                android:text="@string/articles"
                android:drawableStart="@drawable/ic_article"
                android:drawablePadding="10dp"
                style="@style/CustomEcoHubButton" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/videosButton"
                android:text="@string/videos"
                android:drawableStart="@drawable/ic_video"
                android:drawablePadding="10dp"
                style="@style/CustomEcoHubButton"
                android:layout_marginBottom="25dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
