<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationPage"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    tools:context=".view.registration.RegistrationActivity">

    <ImageView
        android:id="@+id/planetzeLogo"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/planetze_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/registerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:elevation="4dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/signUpBtn"
                android:textAlignment="center"
                android:textColor="@color/oxfordblue"
                android:layout_marginBottom="5dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/signUpInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/signUpInstruction"
                android:textAlignment="center"
                android:textColor="@color/oxfordblue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/fullNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/fullName"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="6dp"
                android:hint="@string/fullName"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#64646A" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="6dp"
                android:hint="@string/placeholderEmail"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#64646A" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="6dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#64646A" />

            <TextView
                android:id="@+id/confirmPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:text="@string/confirmPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="6dp"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#64646A" />

            <Button
                style="@style/CustomButton"
                android:id="@+id/registerBtn"
                android:text="@string/registerBtn" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="61dp"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:indeterminate="true"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_exists"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/Loginbtn"
            android:textColor="@color/skyblue"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>