<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_pass_page"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/register_page_background"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/planetze_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:elevation="4dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/reset_your_password"
                android:fontFamily="@font/acme"
                android:textColor="@color/oxfordblue"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                android:text="@string/password_instructions"
                android:fontFamily="@font/bitter_semibold"
                android:textColor="@color/oxfordblue"
                android:paddingBottom="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/acme"
                android:text="@string/email"
                android:textColor="@color/black"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_reset_email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="6dp"
                android:hint="@string/placeholderEmail"
                android:textColorHint="#64646A"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/reset_pass_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/skyblue"
                android:fontFamily="sans-serif-medium"
                android:text="@string/reset_instructions"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/back_to_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/bitter_semibold"
        android:text="@string/back_to_login"
        android:textColor="@color/skyblue"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>